--- a/lib/index.scss
+++ b/lib/index.scss
@@ -1,2 +1,6 @@
 /// Copyright © 2020, CosmicMind, Inc. <http://cosmicmind.com>. All rights reserved.
 
+@import '_layout';
+@import '_content';
+@import '_display';
+@import '_elevation';
