--- a/lib/html/base.pug
+++ b/lib/html/base.pug
@@ -21,9 +21,7 @@ html(lang='en')
     each style in styles
       link(rel='stylesheet', type='text/css', media='all', href=style)
 
-  body
-    #app
-    #modal
-
+  body#app
+    
     each script in scripts
       script(src=script, defer)
