cleanup of CSS from main composities

--- a/lib/scss/index.scss
+++ b/lib/scss/index.scss
@@ -4,3 +4,17 @@
 @import '_content';
 @import '_display';
 @import '_elevation';
+
+@import 'elements/_box';
+@import 'elements/_button';
+// @import 'elements/_image';
+// @import 'elements/_text-field';
+@import 'elements/_divider';
+@import 'elements/_checkbox';
+
+@import 'components/_navbar';
+@import 'components/_toolbar';
+// @import 'components/_tab-bar';
+// @import 'components/_list';
+// @import 'components/_dropdown';
+// @import 'components/_modal';
