updated references to composites to add toggling within composites

--- a/lib/html/base.pug
+++ b/lib/html/base.pug
@@ -21,7 +21,6 @@ html(lang='en')
     each style in styles
       link(rel='stylesheet', type='text/css', media='all', href=style)
 
-  body#app
-    
+  body  
     each script in scripts
       script(src=script, defer)
